--- a/script/TODO.txt
+++ b/script/TODO.txt
@@ -1,6 +1,9 @@
-Clear functionality seperation between VXLAN layer and Subnets layer:
-- Flow entries in table 21
-- Config modules (vxlan and subnets)
+Problem:
+I want to extract all the rows where type = 'vxlan' from Interface table.
+Then get a specific column such as 'options' from the result. 
 
-Layer violation should always be avoided to make the program much simpler.
+(1) ovsdb.py
+def search(table, where, column)
+
+(2) config/subnets.py
 
