--- a/TODO.txt
+++ b/TODO.txt
@@ -2,27 +2,16 @@
 
 JSON-RPC respone error handling ==> raise some Exception
 
-[9] vid modification in dvsdvr.yaml results in an add operation, not an update operation.
-
-[10] yamldiff.py cannot generate diff for list.
-peers:
-  - 192.168.1.101
-  - 192.168.1.102
-
-peers:
-  - 192.168.1.101
-  - 192.168.1.103
-  - 192.168.1.102
-
-In this case, yamldiff should generate add peers 192.168.1.103, not update peers with all the addresses.
-
-[12] sit_debug stalls somehow.
 
 [13] nlan_agent.py local mode: state deployment w/o using nlan.py.
 
 [14] State audit: YAML -- active state -- OVSDB consistency
 
 [15] NLAN Agent on Windows, without OVSDB or with SQLITE as a local DB.
+
+[16] Run nlan_agent.py within a linux container (by using lxc-execute/lxc-init).
+
+I have already built lxc-capable linux kernel for OpenWrt and Raspbian. For the simulation environment, I need to re-build lxc-capable OpenWrt image for x86 w/ lxc support.
 
 -----
 
@@ -52,5 +41,27 @@ Command '['/etc/init.d/nlan', 'enable']' returned non-zero exit status 1
 
 [8] nlan.py and yamldiff.py dose not handle -G option. -- DONE! Also added -R option.
 
+[9] vid modification in dvsdvr.yaml results in an add operation, not an update operation. -- DONE! Decided to prohibit vid modification.
+
+[10] yamldiff.py cannot generate diff for list. -- DONE! update transalates into delete/add peers in subnets.py.
+
+peers:
+  - 192.168.1.101
+  - 192.168.1.102
+
+peers:
+  - 192.168.1.101
+  - 192.168.1.103
+  - 192.168.1.102
+
+In this case, yamldiff should generate add peers 192.168.1.103, not update peers with all the addresses.
+
 [11] A pair of ip_dvr and mode should be expressed as a 'map' data on OVSDB. -- DONE!
+
+[12] sit_debug stalls somehow. -- DONE! This problem seems to be a Python's bug:
+
+queue.put({'a':<very large object>})
+l = queue.get()
+
+Reference: http://bryceboe.com/2011/01/28/the-python-multiprocessing-queue-and-large-objects/
 
